--- a/.github/workflows/generate_cyber_radar.yml
+++ b/.github/workflows/generate_cyber_radar.yml
@@ -1,4 +1,4 @@
-name: Generate Live Cyber Radar
+name: Generate Cyber Radar Live
 
 on:
   workflow_dispatch:
@@ -10,32 +10,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
       - uses: actions/checkout@v4
 
-      # Setup Python
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # Install dependencies
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Generate the live cyber radar SVG
       - name: Generate Cyber Radar
         run: python3 scripts/generate_cyber_radar_live.py
 
-      # Commit and push the generated SVG
-      - name: Commit generated SVG
+      - name: Commit generated SVGs
         uses: EndBug/add-and-commit@v9
         with:
-          add: "assets/cyber_radar_live.svg"
+          add: "assets/cyber_radar_live.svg,assets/cyber_radar_static.svg"
           author_name: "mitre-bot"
           author_email: "mitre-bot@users.noreply.github.com"
-          message: "Update live cyber radar"
+          message: "Update cyber radar"
           push: true
           branch: main
 
