--- a/.github/workflows/generate_cyber_pulse.yml
+++ b/.github/workflows/generate_cyber_pulse.yml
@@ -1,37 +1,35 @@
-name: Generate Cyber Pulse
+name: Generate Cyber Radar Live
 
 on:
-  workflow_dispatch:    # allows manual runs
   schedule:
-    - cron: "*/30 * * * *"   # every 30 minutes
+    - cron: "*/30 * * * *"  # Every 30 minutes
+  workflow_dispatch:
 
 jobs:
-  build:
+  generate-svg:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
-          pip install -r requirements.txt || echo "No dependencies needed"
+          python -m pip install --upgrade pip
 
-      - name: Generate Cyber Pulse SVG
-        run: python3 scripts/generate_cyber_pulse.py
+      - name: Generate SVG
+        run: |
+          python scripts/generate_cyber_radar_live.py
 
-      - name: Commit generated SVG
-        uses: EndBug/add-and-commit@v9
-        with:
-          add: "assets/cyber_pulse.svg"
-          author_name: "mitre-bot"
-          author_email: "mitre-bot@users.noreply.github.com"
-          message: "Update cyber pulse"
-          push: true
-          branch: main
+      - name: Commit and push SVG
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add assets/cyber_radar_live.svg
+          git commit -m "Update live cyber radar"
+          git push
