--- a/.github/workflows/generate_threat_heatmap.yml
+++ b/.github/workflows/generate_threat_heatmap.yml
@@ -1,19 +1,19 @@
 name: Generate Cyber Heatmap
 
-# Trigger on push or on a schedule
+# Trigger manually or on push to main
 on:
   push:
     paths:
       - 'scripts/generate_threat_heatmap.py'
+  workflow_dispatch:       # allows manual runs
   schedule:
-    - cron: '*/30 * * * *'  # every 30 minutes
+    - cron: '*/30 * * * *' # every 30 minutes
 
 jobs:
-  generate_svg:
+  generate:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -22,17 +22,10 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
+        run: pip install -r requirements.txt || echo "No requirements.txt, skipping"
 
-      - name: Run heatmap generator
-        run: |
-          python scripts/generate_threat_heatmap.py
+      - name: Ensure assets folder exists
+        run: mkdir -p assets
 
-      - name: Commit and push SVG
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add assets/cyber_heatmap_live.svg
-          git commit -m "Update live cyber heatmap" || echo "No changes to commit"
-          git push
+      - name: Generate Cyber Heatmap
+        run: python scripts/generate_threat_heatmap.py
