--- a/.github/workflows/generate_threat_heatmap.yml
+++ b/.github/workflows/generate_threat_heatmap.yml
@@ -1,13 +1,12 @@
 name: Generate Cyber Heatmap
 
-# Trigger manually or on push to main
 on:
   push:
     paths:
       - 'scripts/generate_threat_heatmap.py'
-  workflow_dispatch:       # allows manual runs
+  workflow_dispatch:
   schedule:
-    - cron: '*/30 * * * *' # every 30 minutes
+    - cron: '*/30 * * * *'
 
 jobs:
   generate:
@@ -15,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          persist-credentials: true  # allow commit
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -29,3 +30,11 @@ jobs:
 
       - name: Generate Cyber Heatmap
         run: python scripts/generate_threat_heatmap.py
+
+      - name: Commit and push SVG
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add assets/cyber_heatmap_live.svg
+          git commit -m "Update cyber heatmap SVG [skip ci]" || echo "No changes to commit"
+          git push
