--- a/.github/workflows/generate_threat_heatmap.yml
+++ b/.github/workflows/generate_threat_heatmap.yml
@@ -3,30 +3,31 @@ name: Generate Cyber Heatmap
 on:
   schedule:
     - cron: '*/15 * * * *'  # every 15 minutes
-  workflow_dispatch:
+  workflow_dispatch:  # manual trigger
 
 jobs:
-  build:
+  generate_svg:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: "3.x"
 
       - name: Install dependencies
         run: pip install --upgrade pip
 
-      - name: Generate Heatmap
+      - name: Generate SVG
         run: python scripts/generate_threat_heatmap.py
 
       - name: Commit and Push
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git add assets/cyber_heatmap_live.svg
-          git commit -m "Update live cyber heatmap [skip ci]" || echo "No changes to commit"
+          git commit -m "Update live threat heatmap [skip ci]" || echo "No changes to commit"
           git push
