--- a/.github/workflows/generate_live_threat_feed.yml
+++ b/.github/workflows/generate_live_threat_feed.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '*/2 * * * *' # Runs every 2 minutes
+    - cron: '*/5 * * * *' # Runs every 5 minutes
   workflow_dispatch:
 
 jobs:
@@ -27,12 +27,13 @@ jobs:
         run: |
           python scripts/generate_live_threat_feed.py
 
-      - name: Commit and push SVG
+      - name: Commit and push SVG safely
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add assets/live_threat_feed.svg
-          git commit -m "Update live threat feed SVG"
-          git push
+          git commit -m "Update live threat feed SVG" || echo "No changes to commit"
+          git pull --rebase origin main
+          git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
