--- a/.github/workflows/generate_live_threat_feed.yml
+++ b/.github/workflows/generate_live_threat_feed.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '*/5 * * * *' # Runs every 5 minutes
+    - cron: '*/2 * * * *'  # Runs every 5 minutes
   workflow_dispatch:
 
 jobs:
@@ -22,18 +22,19 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          # Add any other packages your Python script needs
 
       - name: Generate Live Threat Feed SVG
         run: |
-          python scripts/generate_live_threat_feed.py
+          python scripts/generate_live_threat_feed_compact.py
 
-      - name: Commit and push SVG safely
+      - name: Commit and push SVG
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add assets/live_threat_feed.svg
-          git commit -m "Update live threat feed SVG" || echo "No changes to commit"
           git pull --rebase origin main
+          git add assets/live_threat_feed.svg
+          git commit -m "Update compact live threat feed SVG" || echo "No changes to commit"
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
