--- a/.github/workflows/generate_live_threat_feed.yml
+++ b/.github/workflows/generate_live_threat_feed.yml
@@ -1,10 +1,11 @@
-name: Generate Live Threat Feed
+name: Generate Compact Live Threat Feed
 
 on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '*/2 * * * *'  # Runs every 5 minutes
+    # Runs every 5 minutes
+    - cron: '*/5 * * * *'
   workflow_dispatch:
 
 jobs:
@@ -22,16 +23,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # Add any other packages your Python script needs
 
-      - name: Generate Live Threat Feed SVG
+      - name: Generate Compact Live Threat Feed SVG
         run: |
-          python scripts/generate_live_threat_feed_compact.py
+          python scripts/generate_live_threat_feed.py --width 400 --height 200
 
-      - name: Commit and push SVG
+      - name: Commit and push SVG safely
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git reset --hard
           git pull --rebase origin main
           git add assets/live_threat_feed.svg
           git commit -m "Update compact live threat feed SVG" || echo "No changes to commit"
