--- a/.github/workflows/generate_live_threat_feed.yml
+++ b/.github/workflows/generate_live_threat_feed.yml
@@ -1,16 +1,16 @@
-name: Generate Compact Live Threat Feed
+name: Generate Live Threat Chart
 
 on:
   push:
     branches: [ main ]
   schedule:
-    # Runs every 5 minutes
-    - cron: '*/5 * * * *'
+    - cron: '*/5 * * * *' # every 5 minutes
   workflow_dispatch:
 
 jobs:
   generate_svg:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -24,18 +24,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
 
-      - name: Generate Compact Live Threat Feed SVG
+      - name: Generate Live Threat Chart SVG
         run: |
-          python scripts/generate_live_threat_feed.py --width 400 --height 200
+          python scripts/generate_live_threat_chart.py
 
-      - name: Commit and push SVG safely
+      - name: Commit and push SVG
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git reset --hard
+          git add assets/live_threat_chart.svg
+          git commit -m "Update live threat chart SVG" || echo "No changes to commit"
           git pull --rebase origin main
-          git add assets/live_threat_feed.svg
-          git commit -m "Update compact live threat feed SVG" || echo "No changes to commit"
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
