--- a/.github/workflows/generate_live_threat_feed.yml
+++ b/.github/workflows/generate_live_threat_feed.yml
@@ -1,4 +1,4 @@
-name: Generate Live Threat Chart
+name: Generate Live Threat Radial
 
 on:
   push:
@@ -24,16 +24,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
 
-      - name: Generate Live Threat Chart SVG
+      - name: Generate Live Threat Radial SVG
         run: |
-          python scripts/generate_live_threat_chart.py
+          python scripts/generate_live_threat_radial.py
 
       - name: Commit and push SVG
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add assets/live_threat_chart.svg
-          git commit -m "Update live threat chart SVG" || echo "No changes to commit"
+          git add assets/live_threat_radial.svg
+          git commit -m "Update live threat radial SVG" || echo "No changes to commit"
           git pull --rebase origin main
           git push origin main
         env:
