--- a/.github/workflows/generate_threat_cloud.yml
+++ b/.github/workflows/generate_threat_cloud.yml
@@ -1,4 +1,4 @@
-name: Generate Live Threat Radial
+name: Generate Live Threat Cloud
 
 on:
   push:
@@ -10,7 +10,6 @@ on:
 jobs:
   generate_svg:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -21,20 +20,19 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
+        run: python -m pip install --upgrade pip
 
-      - name: Generate Live Threat Radial SVG
-        run: |
-          python scripts/generate_live_threat_radial.py
+      - name: Generate Live Threat Cloud SVG
+        run: python scripts/generate_threat_cloud.py
 
       - name: Commit and push SVG
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add assets/live_threat_radial.svg
-          git commit -m "Update live threat radial SVG" || echo "No changes to commit"
+          git add assets/live_threat_cloud.svg
+          git commit -m "Update live threat cloud SVG" || echo "No changes to commit"
           git pull --rebase origin main
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
