--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -15,11 +16,13 @@ jobs:
         with:
           python-version: "3.11"
 
-      - run: python dashboard/generate_dashboard.py
+      - run: pip install -r requirements.txt
+
+      - run: python scripts/generate_dashboard.py
 
       - run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add dashboard/
+          git add assets/
           git commit -m "Update live security dashboard" || echo "No changes"
           git push
