--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -1,28 +1,29 @@
-name: Update Live Dashboard
+name: Update Dashboard
 
 on:
   schedule:
-    - cron: "*/10 * * * *"
-  workflow_dispatch:
+    - cron: '*/10 * * * *'  # every 10 minutes
+  workflow_dispatch:        # allow manual trigger
 
 jobs:
-  update:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
-
-      - run: pip install -r requirements.txt
-
-      - run: python scripts/generate_dashboard.py
-
-      - run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git add assets/
-          git commit -m "Update live security dashboard" || echo "No changes"
+          python-version: "3.x"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt || true
+      - name: Update dashboard
+        run: python scripts/generate_dashboard.py
+      - name: Commit and push changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add assets/dashboard_data.json assets/live_dashboard.svg assets/dashboard.html
+          git commit -m "Automated dashboard update"
           git push
