--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -18,12 +18,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt || true
-      - name: Update dashboard
+      - name: Run dashboard script
         run: python scripts/generate_dashboard.py
-      - name: Commit and push changes
+      - name: Commit & push updated files
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add assets/dashboard_data.json assets/live_dashboard.svg assets/dashboard.html
-          git commit -m "Automated dashboard update"
+          git commit -m "Automated dashboard update" || echo "No changes to commit"
           git push
