--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -2,28 +2,32 @@ name: Update Dashboard
 
 on:
   schedule:
-    - cron: '*/10 * * * *'  # every 10 minutes
-  workflow_dispatch:        # allow manual trigger
+    - cron: '*/5 * * * *'  # runs every 5 minutes
+  workflow_dispatch:       # manual trigger option
 
 jobs:
-  build:
+  update-dashboard:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt || true
-      - name: Run dashboard script
+          python-version: '3.x'
+
+      - name: Install dependencies (optional)
+        run: pip install -r requirements.txt || echo "No requirements"
+
+      - name: Run dashboard generator
         run: python scripts/generate_dashboard.py
-      - name: Commit & push updated files
+
+      - name: Commit updated JSON
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add assets/dashboard_data.json assets/live_dashboard.svg assets/dashboard.html
-          git commit -m "Automated dashboard update" || echo "No changes to commit"
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add assets/dashboard_data.json
+          git commit -m "Update dashboard JSON [ci skip]" || echo "No changes"
           git push
