--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -2,8 +2,8 @@ name: Update Dashboard
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # runs every 5 minutes
-  workflow_dispatch:       # manual trigger option
+    - cron: '*/5 * * * *'  # every 5 minutes
+  workflow_dispatch:       # manual trigger
 
 jobs:
   update-dashboard:
@@ -18,8 +18,10 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies (optional)
-        run: pip install -r requirements.txt || echo "No requirements"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt || echo "No requirements"
 
       - name: Run dashboard generator
         run: python scripts/app.py
@@ -29,5 +31,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git add assets/dashboard_data.json
-          git commit -m "Update dashboard JSON [ci skip]" || echo "No changes"
+          git commit -m "Update dashboard JSON [ci skip]" || echo "No changes to commit"
           git push
