--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -1,4 +1,4 @@
-name: Update Dashboard
+naname: Update Dashboard
 
 on:
   schedule:
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt || echo "No requirements"
+          pip install flask flask-socketio eventlet
 
       - name: Run dashboard generator
         run: python scripts/app.py
