--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -3,33 +3,26 @@ name: Update Dashboard
 on:
   schedule:
     - cron: '*/5 * * * *'  # every 5 minutes
-  workflow_dispatch:       # manual trigger
+  workflow_dispatch:
 
 jobs:
   update-dashboard:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flask flask-socketio eventlet
-
       - name: Run dashboard generator
         run: python scripts/app.py
 
-      - name: Commit updated JSON
+      - name: Commit updated SVG
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add assets/dashboard_data.json
-          git commit -m "Update dashboard JSON [ci skip]" || echo "No changes to commit"
+          git add assets/live_dashboard.svg
+          git commit -m "Update dashboard SVG [ci skip]" || echo "No changes"
           git push
