--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -2,7 +2,7 @@ name: Update SOC Dashboard
 
 on:
   schedule:
-    - cron: "0 * * * *"   # every hour
+    - cron: "0 * * * *"
   workflow_dispatch:
 
 jobs:
@@ -10,8 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Show repo files (debug)
+        run: ls -la
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -37,7 +40,6 @@ jobs:
           else:
               data = default_data
 
-          # --- SOC-style simulated changes ---
           data["critical"] = max(0, data["critical"] + random.randint(-1, 3))
           data["abnormal"] = max(0, data["abnormal"] + random.randint(-2, 5))
           data["medium"] = max(0, data["medium"] + random.randint(-1, 2))
@@ -52,7 +54,8 @@ jobs:
           EOF
 
       - name: Generate SVG dashboard
-        run: python generate_dashboard.py
+        run: |
+          python ./generate_dashboard.py
 
       - name: Commit and push updates
         run: |
