--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -13,20 +13,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Show repo files (debug)
-        run: ls -la
+      - name: Debug repo tree
+        run: |
+          pwd
+          ls -la
 
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      - name: Initialize or Update SOC data
+      - name: Initialize or update SOC data
         run: |
           python - <<EOF
           import json, os, datetime, random
 
-          default_data = {
+          data = {
               "critical": 0,
               "abnormal": 0,
               "medium": 0,
@@ -36,14 +38,12 @@ jobs:
 
           if os.path.exists("data.json"):
               with open("data.json") as f:
-                  data = json.load(f)
-          else:
-              data = default_data
+                  data.update(json.load(f))
 
-          data["critical"] = max(0, data["critical"] + random.randint(-1, 3))
-          data["abnormal"] = max(0, data["abnormal"] + random.randint(-2, 5))
-          data["medium"] = max(0, data["medium"] + random.randint(-1, 2))
-          data["investigated"] = max(0, data["investigated"] + random.randint(0, 2))
+          data["critical"] += random.randint(0, 3)
+          data["abnormal"] += random.randint(0, 5)
+          data["medium"] += random.randint(0, 2)
+          data["investigated"] += random.randint(0, 1)
 
           data["updated"] = datetime.datetime.utcnow().strftime(
               "%Y-%m-%d %H:%M:%S UTC"
@@ -54,13 +54,12 @@ jobs:
           EOF
 
       - name: Generate SVG dashboard
-        run: |
-          python ./generate_dashboard.py
+        run: python generate_dashboard.py
 
       - name: Commit and push updates
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git add dashboard.svg data.json
-          git commit -m "🔄 Update SOC dashboard" || exit 0
+          git commit -m "Update SOC dashboard" || exit 0
           git push
