--- a/.github/workflows/update-dashboard.yml
+++ b/.github/workflows/update-dashboard.yml
@@ -2,7 +2,7 @@ name: Update SOC Dashboard
 
 on:
   schedule:
-    - cron: "*/5 * * * *"  # Runs every 5 minutes
+    - cron: "*/1 * * * *"  # Runs every 2 minutes
   workflow_dispatch:
 
 jobs:
@@ -13,23 +13,54 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Show repo files (debug)
+        run: ls -la
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: Run generate_dashboard.py
-        run: python scripts/generate_dashboard.py  # adjust if your script is in root
-
-      - name: Update cache buster in README.md
+      - name: Initialize or Update SOC data
         run: |
-          TIMESTAMP=$(date +%s)
-          sed -i "s|\(dashboard.svg?cache=\)[0-9]*|\1$TIMESTAMP|" README.md
+          python - <<EOF
+          import json, os, datetime, random
 
-      - name: Commit and push changes
+          default_data = {
+              "critical": 0,
+              "abnormal": 0,
+              "medium": 0,
+              "investigated": 0,
+              "updated": ""
+          }
+
+          if os.path.exists("data.json"):
+              with open("data.json") as f:
+                  data = json.load(f)
+          else:
+              data = default_data
+
+          data["critical"] = max(0, data["critical"] + random.randint(-1, 3))
+          data["abnormal"] = max(0, data["abnormal"] + random.randint(-2, 5))
+          data["medium"] = max(0, data["medium"] + random.randint(-1, 2))
+          data["investigated"] = max(0, data["investigated"] + random.randint(0, 2))
+
+          data["updated"] = datetime.datetime.utcnow().strftime(
+              "%Y-%m-%d %H:%M:%S UTC"
+          )
+
+          with open("data.json", "w") as f:
+              json.dump(data, f, indent=2)
+          EOF
+
+      - name: Generate SVG dashboard
+        run: python generate_dashboard.py
+
+      - name: Commit and push updates
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add dashboard.svg data.json README.md
-          git commit -m "🔄 Update SOC dashboard and cache buster" || exit 0
+          git add dashboard.svg data.json
+          git commit -m "🔄 Update SOC dashboard" || exit 0
           git push
+
